--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  local-dir: website
+  local-dir: dist
   github-token: $GH_TOKEN
   keep-history: true
   on:
